fixing white space in register page

--- a/client/src/styles/pages-styles/register-page.css
+++ b/client/src/styles/pages-styles/register-page.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
   gap: 1vh;
   text-align: center;
   background: url("../../assets/background/background_mobile_welcome.svg");
